add bootstrap lib

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "SQLConnection": ""
+    "SQLConnection": "Data Source=IBRAHIMALTALAA\\SQLEXPRESS;Initial Catalog=AlgarveCS;user id=sa;password=sql22p;Integrated Security=True;MultipleActiveResultSets=True;TrustServerCertificate=True"
   },
   "AllowedHosts": "*"
 }
