succesfull get data from table tblblog

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,8 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "ConnectionStrings": {
-    "SQLConnection": "Data Source=IBRAHIMALTALAA\\SQLEXPRESS;Initial Catalog=AlgarveCS;user id=sa;password=sql22p;Integrated Security=True;MultipleActiveResultSets=True;TrustServerCertificate=True"
+  "OracleConnectionString": {
+    "ConnectionString": "data source=localhost:1521/orcl;password=BLOG;persist security info=True;user id=BLOG;pooling=true;"
   },
   "AllowedHosts": "*"
 }
